--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,13 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_cache_manager: ^3.3.0
   flutter_bloc: ^8.1.6
-  
+  shared_preferences: ^2.3.1
+  intl: ^0.19.0
+  top_snackbar_flutter: ^3.1.0
+  sensors_plus: ^6.0.1 
+  equatable: ^2.0.5
+  loading_animation_widget: ^1.2.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 flutter_icons:
