--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 3.0.0+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -60,6 +60,7 @@ dependencies:
   sensors_plus: ^6.0.1 
   equatable: ^2.0.5
   loading_animation_widget: ^1.2.1
+  geolocator: ^13.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
