fix internt access error and store current vars

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.0.0+1
+version: 3.0.5+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -61,6 +61,7 @@ dependencies:
   equatable: ^2.0.5
   loading_animation_widget: ^1.2.1
   geolocator: ^13.0.1
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -101,6 +102,7 @@ flutter:
     - assets/restricted.jpg
     - assets/noInternet.png
     - assets/permission.jpg
+    - assets/ApkOutdated.png
     - assets/105673-sync-data.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
